[admin-panel] refactor panels + small changes
Added textarea

Refactor panel into separate component

added translations

improve transitions

add event listeners for keyboard Escape to close dropdowns and panels

--- a/src/gui/patterns/components/components.scss
+++ b/src/gui/patterns/components/components.scss
@@ -1,5 +1,7 @@
 @import './button/button';
-@import './textfield/textfield';
+@import 'src/gui/patterns/components/formfields/textfield';
+@import 'src/gui/patterns/components/formfields/textarea/textarea';
 @import './navigation/navigation';
 @import './icon/icon';
 @import './modal/modal';
+@import './panel/panel';
