--- a/src/gui/patterns/globals/variables.scss
+++ b/src/gui/patterns/globals/variables.scss
@@ -2,6 +2,8 @@ $font-size-small: 14px;
 $font-size-regular: 16px;
 $font-size-large: 18px;
 
+$letter-spacing-default: 1.1px;
+
 $font-weight-regular: 400;
 $font-weight-medium: 500;
 $font-weight-bold: 600;
