--- a/src/gui/patterns/components/button/button.scss
+++ b/src/gui/patterns/components/button/button.scss
@@ -11,3 +11,13 @@
         background-color: $color-gray;
     }
 }
+
+.button--item {
+    padding: 0 15px;
+    border: none;
+    height: 100%;
+
+    &:focus {
+        outline: none;
+    }
+}
