--- a/src/gui/patterns/components/components.scss
+++ b/src/gui/patterns/components/components.scss
@@ -5,3 +5,5 @@
 @import './icon/icon';
 @import './modal/modal';
 @import './panel/panel';
+@import './inventory-item/inventory-item';
+@import './gear/gear';
