--- a/src/gui/patterns/globals/variables.scss
+++ b/src/gui/patterns/globals/variables.scss
@@ -12,6 +12,7 @@ $color-black: #000000;
 $color-white: #ffffff;
 $color-green: #02a80b;
 $color-gray: #5f5f5f;
+$color-red: #861414;
 
 $transition-duration: .3s;
 $transition-easing: ease;
