--- a/src/gui/patterns/modules/modules.scss
+++ b/src/gui/patterns/modules/modules.scss
@@ -2,3 +2,4 @@
 @import './register/register';
 @import './funds/funds';
 @import 'src/gui/patterns/modules/admin-panel/admin-panel';
+@import './inventory/inventory';
