--- a/src/gui/index.scss
+++ b/src/gui/index.scss
@@ -13,6 +13,6 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 }
