[inventory] Add inventory misc items, rework equipped logic. improved styles

--- a/src/gui/patterns/components/components.scss
+++ b/src/gui/patterns/components/components.scss
@@ -8,3 +8,4 @@
 @import './inventory-item/inventory-item';
 @import './gear/gear';
 @import './equipped/equipped';
+@import './inventory-items/inventory-items';
