--- a/src/gui/patterns/components/inventory-item/inventory-item.scss
+++ b/src/gui/patterns/components/inventory-item/inventory-item.scss
@@ -27,10 +27,7 @@
     }
 
     &.inventory-item--simple {
-        width: 150px;
-        height: 150px;
         max-width: 200px;
-        max-height: 200px;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -69,6 +66,7 @@
 .item__name {
     margin: 0 auto;
     align-self: center;
+    word-break: break-all;
 }
 
 .item__action {
