--- a/src/gui/patterns/components/components.scss
+++ b/src/gui/patterns/components/components.scss
@@ -1,6 +1,7 @@
 @import './button/button';
-@import 'src/gui/patterns/components/formfields/textfield';
-@import 'src/gui/patterns/components/formfields/textarea/textarea';
+@import './formfields/textfield';
+@import './formfields/textarea/textarea';
+@import './formfields/select/select';
 @import './navigation/navigation';
 @import './icon/icon';
 @import './modal/modal';
