--- a/src/gui/patterns/components/formfields/textfield.scss
+++ b/src/gui/patterns/components/formfields/textfield.scss
@@ -1,6 +1,6 @@
 .textfield {
     display: block;
-    width: calc(100% - 30px);
+    width: 100%;
     height: 30px;
     margin-top: 15px;
     padding-left: 15px;
