--- a/src/gui/patterns/modules/inventory/inventory.scss
+++ b/src/gui/patterns/modules/inventory/inventory.scss
@@ -6,6 +6,7 @@
     justify-content: space-evenly;
     perspective: 300px;
     perspective-origin: top;
+    top: 200px;
 }
 
 .inventory__navigation {
