--- a/src/gui/patterns/modules/login/login.scss
+++ b/src/gui/patterns/modules/login/login.scss
@@ -7,7 +7,7 @@
     background-color: rgba($color-black, .7);
     color: $color-white;
     padding: 30px;
-    width: 320px;
+    width: 420px;
     transition: opacity $transition-duration $transition-easing;
 }
 
@@ -22,6 +22,7 @@
 
 .login__subtitle {
     color: $color-green;
+    margin-top: 8px;
 }
 
 .login__form {
